Fixing issue with positioning on small screens

--- a/apps/betterangels-backend/templates/admin/shelters/change_form.html
+++ b/apps/betterangels-backend/templates/admin/shelters/change_form.html
@@ -8,6 +8,7 @@
     label.required::after{
         content: '\00a0*' !important;
         color: red;
+        position: absolute;
     }
     </style>
     {{ block.super }}
