Shelter db required fields UI change (SDB-40) (#1147)
* Adding UI indicator for required fields

* Fixing issue with positioning on small screens

---------

Co-authored-by: Paul Vecchio <paul@betterangels.la>

--- a/apps/betterangels-backend/templates/admin/shelters/change_form.html
+++ b/apps/betterangels-backend/templates/admin/shelters/change_form.html
@@ -5,6 +5,17 @@
     .places-widget > input:first-child {
         width: 100% !important;
     }
+    label.required::after{
+        content: '\00a0*' !important;
+        color: red;
+        position: absolute;
+    }
     </style>
     {{ block.super }}
+{% endblock %}
+{% block content_title %}
+    {{ block.super }}
+    <p style="font-size: 14px; margin-top: 10px;">
+        <span style="color: red;">*</span> indicates a required field
+    </p>
 {% endblock %}
