--- a/apps/betterangels-backend/templates/admin/shelters/change_form.html
+++ b/apps/betterangels-backend/templates/admin/shelters/change_form.html
@@ -13,6 +13,11 @@
     </style>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
+            ["interior_photos", "exterior_photos", "videos"].forEach(element =>{
+                if(!document.querySelector(`#${element}-0`)){
+                    document.getElementById(element + "-group").style = "display: none;";
+                }
+            });
             ['id_interior_photos_multiple', 'id_exterior_photos_multiple', 'id_videos_multiple'].forEach(element => {
                 const target = document.getElementById(element);
                 let allVals = {newFiles:[], filesCount:0};
