Added color to tailwind config and replaced hex values with established vars in tailwind config

--- a/apps/shelter-web/src/assets/styles/global.css
+++ b/apps/shelter-web/src/assets/styles/global.css
@@ -16,6 +16,7 @@
   --color-neutral-99: #f4f6fd;
   --color-success-30: #007934;
   --color-success-90: #ddf8e8;
+  --color-primary-dark: #1650C1;
 }
 
 * {
