--- a/apps/betterangels-backend/templates/account/email/email_invite_organization.html
+++ b/apps/betterangels-backend/templates/account/email/email_invite_organization.html
@@ -85,7 +85,7 @@
                         <tr>
                             <td align="left" style="padding-top:20px;">
                                 <p style="font-size: 15px; color: #1E3342; line-height: 22px; margin: 0">
-                                    We’re excited to partner with you in making homelessness in LA easier to solve!
+                                    We're excited to work together to make solving homelessness in LA easier!
                                 </p>
                             </td>
                         </tr>
