--- a/apps/betterangels-backend/templates/account/email/email_invite_organization.html
+++ b/apps/betterangels-backend/templates/account/email/email_invite_organization.html
@@ -70,10 +70,14 @@
                                         Download the Better Angels app:
                                         <ul style="padding-left:16px; margin-top:6px;">
                                             <li>
-                                                <a href="https://play.google.com/store/apps/details?id=la.betterangels.app&hl=en">Google Play Store</a>
+                                                <a href="https://play.google.com/store/apps/details?id=la.betterangels.app&hl=en"
+                                                   style="color:#1976D2;
+                                                          text-decoration:underline">Google Play Store</a>
                                             </li>
                                             <li>
-                                                <a href="https://apps.apple.com/us/app/betterangels/id6468135540">Apple App Store</a>
+                                                <a href="https://apps.apple.com/us/app/betterangels/id6468135540"
+                                                   style="color:#1976D2;
+                                                          text-decoration:underline">Apple App Store</a>
                                             </li>
                                         </ul>
                                     </li>
