--- a/apps/betterangels-backend/templates/account/email/email_invite_organization.html
+++ b/apps/betterangels-backend/templates/account/email/email_invite_organization.html
@@ -88,9 +88,7 @@
                         </tr>
                         <tr>
                             <td align="left" style="padding-top:20px;">
-                                <p style="font-size: 15px; color: #1E3342; line-height: 22px; margin: 0">
-                                    We're excited to work together to make solving homelessness in LA easier!
-                                </p>
+                                <p style="font-size: 15px; color: #1E3342; line-height: 22px; margin: 0">Together, we can solve homelessness.</p>
                             </td>
                         </tr>
                         <tr>
