Enter the one-time passcode you'll receive via email.

--- a/apps/betterangels-backend/templates/account/email/email_invite_organization.html
+++ b/apps/betterangels-backend/templates/account/email/email_invite_organization.html
@@ -82,7 +82,7 @@
                                         </ul>
                                     </li>
                                     <li style="margin-top:6px;">Log in using the email address this invitation was sent to.</li>
-                                    <li style="margin-top:6px;">You'll receive a One-Time Passcode via email to finish logging in.</li>
+                                    <li style="margin-top:6px;">Enter the one-time passcode you'll receive via email.</li>
                                 </ol>
                             </td>
                         </tr>
