Update Invite Email Copy (DEV-1866) (#1345)
* Update copy

* Revert closing and fix typo

* Styling

* Update copy to Together, we can solve homelessness

* Enter the one-time passcode you'll receive via email.

--- a/apps/betterangels-backend/templates/account/email/email_invite_organization.html
+++ b/apps/betterangels-backend/templates/account/email/email_invite_organization.html
@@ -24,11 +24,9 @@
                            style="max-width: 516px;
                                   background-color: #ffffff;
                                   border: 1px solid #d1d1d1;
-                                  padding-left: 61px;
-                                  padding-right: 61px;
-                                  padding-bottom: 48px">
+                                  padding: 40px 50px">
                         <tr>
-                            <td align="center" style="padding-top: 40px;padding-bottom: 54px;">
+                            <td align="center" style="padding-bottom: 40px;">
                                 <svg height="30px"
                                      width="200px"
                                      id="Layer_1"
@@ -56,54 +54,46 @@
                             </td>
                         </tr>
                         <tr>
-                            <td align="left" style="padding-bottom: 37px;">
-                                <p style="font-size: 16px; color: #1E3342; margin: 0;">Hello!</p>
+                            <td align="left" style="padding-bottom: 20px;">
+                                <p style="font-size: 22px; line-height: 32px; color: #1E3342; margin: 0">Congratulations on joining Better Angels!</p>
                             </td>
                         </tr>
                         <tr>
-                            <td align="left" style="padding-bottom: 33px;">
-                                <p style="font-size: 24px;
-                                          line-height: 36px;
-                                          font-weight: 400;
-                                          color: #1E3342;
-                                          margin: 0">
-                                    Congratulations on receiving the invite from your organization to use the Better Angels app!
-                                </p>
+                            <td align="left" style="padding-bottom: 20px;">
+                                <p style="font-size: 18px; font-weight: bold; color: #1E3342; margin: 0">Getting started is easy:</p>
                             </td>
                         </tr>
                         <tr>
-                            <td align="left" style="padding-bottom: 34px;">
-                                <p style="font-size: 20px;
-                                          font-weight: 700;
-                                          color: #1E3342;
-                                          line-height: 24px;
-                                          margin: 0">Create your account by clicking the Sign Up button below.</p>
+                            <td align="left" style="font-size:15px; color:#1E3342; line-height:22px;">
+                                <ol style="margin:0; padding-left:18px;">
+                                    <li>
+                                        Download the Better Angels app:
+                                        <ul style="padding-left:16px; margin-top:6px;">
+                                            <li>
+                                                <a href="https://play.google.com/store/apps/details?id=la.betterangels.app&hl=en"
+                                                   style="color:#1976D2;
+                                                          text-decoration:underline">Google Play Store</a>
+                                            </li>
+                                            <li>
+                                                <a href="https://apps.apple.com/us/app/betterangels/id6468135540"
+                                                   style="color:#1976D2;
+                                                          text-decoration:underline">Apple App Store</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li style="margin-top:6px;">Log in using the email address this invitation was sent to.</li>
+                                    <li style="margin-top:6px;">Enter the one-time passcode you'll receive via email.</li>
+                                </ol>
                             </td>
                         </tr>
                         <tr>
-                            <td align="left">
-                                <p style="font-size: 16px; color: #1E3342; line-height: 24px; margin: 0">
-                                    We look forward to working with you to make solving homelessness in LA easier!
-                                </p>
+                            <td align="left" style="padding-top:20px;">
+                                <p style="font-size: 15px; color: #1E3342; line-height: 22px; margin: 0">Together, we can solve homelessness.</p>
                             </td>
                         </tr>
                         <tr>
-                            <td align="center" style="padding-top: 40px; padding-bottom: 40px;">
-                                <a href="http://{{ domain.domain }}{% url "invitations_register" user.pk token %}"
-                                   style="display: inline-block;
-                                          padding: 18px 20px;
-                                          width: 277px;
-                                          background-color: #00B3EB;
-                                          font-size: 16px;
-                                          font-weight: 700;
-                                          color: #ffffff;
-                                          text-decoration: none;
-                                          border-radius: 3px">Sign Up to Better Angels App</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td align="left">
-                                <p style="font-size: 16px; color: #1E3342; line-height: 24px; margin: 0">
+                            <td align="left" style="padding-top: 30px;">
+                                <p style="font-size: 15px; color: #1E3342; line-height: 22px; margin: 0">
                                     Best,
                                     <br>
                                     Better Angels Team
