--- a/apps/betterangels-backend/templates/account/email/email_invite_organization.html
+++ b/apps/betterangels-backend/templates/account/email/email_invite_organization.html
@@ -81,7 +81,9 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li style="margin-top:6px;">Log in using the email address this invitation was sent to.</li>
+                                    <li style="margin-top:6px;">
+                                        Log in using <strong>{{ user.email }}</strong>.
+                                    </li>
                                     <li style="margin-top:6px;">Enter the one-time passcode you'll receive via email.</li>
                                 </ol>
                             </td>
