--- a/apps/betterangels-backend/templates/account/email/email_invite_organization.html
+++ b/apps/betterangels-backend/templates/account/email/email_invite_organization.html
@@ -82,7 +82,7 @@
                                         </ul>
                                     </li>
                                     <li style="margin-top:6px;">
-                                        Log in using <strong>{{ user.email }}</strong>.
+                                        Log in using <strong>{{ invitee_email }}</strong>.
                                     </li>
                                     <li style="margin-top:6px;">Enter the one-time passcode you'll receive via email.</li>
                                 </ol>
